2007-04-04  Jim Evins  <evins@snaught.com>

	* src/ui-property-bar.c: (gl_ui_property_bar_finalize),
	(gl_ui_property_bar_construct):
		Save copy of GladeXML tree so that we don't lose tooltips.

2007-04-02  Jim Evins  <evins@snaught.com>

	* src/merge-properties-dialog.c:
	* src/new-label-dialog.c:
	* src/object-editor.c:
	* src/prefs-dialog.c:
	* src/print-op.c:
	* src/template-designer.c:
	* src/ui-property-bar.c:
	* src/wdgt-media-select.c:
	* src/wdgt-rotate-label.c:
		Fixed several memory leaks.

2007-04-01  Jim Evins  <evins@snaught.com>

	* src/label-text.c: (gl_label_text_init), (copy),
	(gl_label_text_set_lines), (buffer_changed_cb), (get_size),
	(set_font_family), (set_font_size), (set_font_weight),
	(set_font_italic_flag), (set_text_alignment),
	(set_text_line_spacing):
		Cache object size, so that expensive extent calculations are only done
		when needed.

2007-03-30  Jim Evins  <evins@snaught.com>

	* src/prefs-model.c: (gl_prefs_model_load_settings):
		Default to an unlimited list of recent documents, since this parameter
		seems to be pre-filter anyway.

2007-03-30  Jim Evins  <evins@snaught.com>

	* src/label-box.c: (draw_shadow):
	* src/label-ellipse.c: (draw_shadow):
		Added missing shadow fill.
	
2007-03-28  Jim Evins  <evins@snaught.com>

	* src/ui-commands.c: (gl_ui_cmd_file_print):
		Unreferencing the print operation sometimes crashes.  Just don't do it
		right now.

2007-03-28  Jim Evins  <evins@snaught.com>

	* src/print-op.c: (gl_print_op_construct),
	(gl_print_op_get_settings), (gl_print_op_set_settings),
	(gl_print_op_free_settings), (create_custom_widget_cb):
	* src/print-op.h:
	* src/ui-commands.c: (gl_ui_cmd_file_print):
	* src/window.c: (gl_window_init):
	* src/window.h:
		Save print settings and custom settings between print operations
		on the same window.

2007-03-24  Jim Evins  <evins@snaught.com>

	* src/object-editor-image-page.c:
	(gl_object_editor_prepare_image_page),
	(gl_object_editor_set_image), (img_selection_changed_cb):